Updated Final Screen Activity Layout
Signed-off-by: tim_ingle <timothy.ingle@hotmail.com>

--- a/app/src/main/res/layout/activity_final_screen.xml
+++ b/app/src/main/res/layout/activity_final_screen.xml
@@ -9,5 +9,10 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.fsu.tri13.youdontnolejack.FinalScreenActivity">
+	
+	<TextView
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		/>
 
 </LinearLayout>
