--- a/app/src/main/res/layout/activity_final_screen.xml
+++ b/app/src/main/res/layout/activity_final_screen.xml
@@ -8,113 +8,142 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+	android:background="@color/fsuGold"
     tools:context="com.fsu.tri13.youdontnolejack.FinalScreenActivity">
 
-	<TextView
+	<ImageView
 		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
+		android:layout_height="0dp"
+		android:layout_weight="20"
 		android:layout_gravity="center_horizontal"
-		android:text="@string/final_score_single" />
-	<!-- For conceptual purposes only. Actual view will be set dynamically-->
+		android:layout_margin="5dp"
+		android:background="@drawable/banner_final_score" />
+
 
 	<LinearLayout
-	android:layout_width="wrap_content"
-	android:layout_height="wrap_content"
+	android:layout_width="match_parent"
+	android:layout_height="0dp"
+	android:layout_weight="15"
 	android:orientation="horizontal"
 	android:layout_gravity="center_horizontal"
+	android:layout_margin="5dp"
+
 	android:id="@+id/fs_LL1"
 	>
 	<!-- Format - Player: Score -->
 	<TextView
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_gravity="left"
-		android:layout_marginRight="@dimen/activity_horizontal_margin"
+		android:layout_gravity="center|left"
+		android:textColor="@color/fsuGarnet"
+		android:textSize="20sp"
+		android:layout_marginRight="45sp"
 		android:id="@+id/fs_player1"
 		android:text="@string/player_one" />
 
 	<TextView
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_gravity="right"
+		android:layout_gravity="center|right"
+		android:textColor="@color/fsuGarnet"
+		android:textSize="20sp"
 		android:id="@+id/fs_score1"
 		android:text="Score 1" />
 
 	</LinearLayout>
 
 	<LinearLayout
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
+		android:layout_width="match_parent"
+		android:layout_height="0dp"
+		android:layout_weight="15"
 		android:orientation="horizontal"
 		android:layout_gravity="center_horizontal"
 		android:id="@+id/fs_LL2"
-        android:visibility="gone"
+        android:layout_margin="5dp"
+		android:visibility="invisible"
+
 		>
 		<!-- Format - Player: Score -->
 		<TextView
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:layout_gravity="left"
-			android:layout_marginRight="@dimen/activity_horizontal_margin"
+			android:textColor="@color/fsuGarnet"
+			android:textSize="20sp"
+			android:layout_gravity="center|left"
+			android:layout_marginRight="45sp"
 			android:id="@+id/fs_player2"
 			android:text="@string/player_two" />
 
 		<TextView
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:layout_gravity="right"
+			android:layout_gravity="center|right"
+			android:textColor="@color/fsuGarnet"
+			android:textSize="20sp"
 			android:id="@+id/fs_score2"
 			android:text="Score 1" />
 
 	</LinearLayout>
 
 	<LinearLayout
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
+		android:layout_width="match_parent"
+		android:layout_height="0dp"
+		android:layout_weight="15"
 		android:orientation="horizontal"
 		android:layout_gravity="center_horizontal"
 		android:id="@+id/fs_LL3"
-        android:visibility="gone"
+        android:layout_margin="5dp"
+		android:visibility="invisible"
 		>
 		<!-- Format - Player: Score -->
 		<TextView
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:layout_gravity="left"
-			android:layout_marginRight="@dimen/activity_horizontal_margin"
+			android:layout_gravity="center|left"
+			android:textColor="@color/fsuGarnet"
+			android:textSize="20sp"
+			android:layout_marginRight="45sp"
 			android:id="@+id/fs_player3"
 			android:text="@string/player_three" />
 
 		<TextView
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:layout_gravity="right"
+			android:layout_gravity="center|right"
+			android:textColor="@color/fsuGarnet"
+			android:textSize="20sp"
 			android:id="@+id/fs_score3"
 			android:text="Score 1" />
 
 	</LinearLayout>
 
 	<LinearLayout
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
+		android:layout_width="match_parent"
+		android:layout_height="0dp"
+		android:layout_weight="15"
 		android:orientation="horizontal"
 		android:layout_gravity="center_horizontal"
 		android:id="@+id/fs_LL4"
-        android:visibility="gone"
+		android:layout_margin="5dp"
+		android:visibility="invisible"
 		>
 		<!-- Format - Player: Score -->
 		<TextView
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:layout_gravity="left"
-			android:layout_marginRight="@dimen/activity_horizontal_margin"
+			android:layout_gravity="center|left"
+			android:textColor="@color/fsuGarnet"
+			android:textSize="20sp"
+			android:layout_marginRight="45sp"
 			android:id="@+id/fs_player4"
 			android:text="@string/player_four" />
 
 		<TextView
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:layout_gravity="right"
+			android:textColor="@color/fsuGarnet"
+			android:textSize="20sp"
+			android:layout_gravity="center|right"
 			android:id="@+id/fs_score4"
 			android:text="Score 1" />
 
@@ -122,26 +151,37 @@
 
 	<LinearLayout
 		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
+		android:layout_height="0dp"
+		android:layout_weight="10"
 		android:orientation="horizontal"
 		android:layout_gravity="center_horizontal"
+		android:layout_margin="5dp"
 		>
-		<!-- Format - Player: Score -->
+
 		<Button
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_gravity="left"
-			android:layout_marginRight="@dimen/activity_horizontal_margin"
+			android:layout_marginRight="15dp"
 			android:id="@+id/button_main_menu"
-			android:text="@string/main_menu" />
+			android:background="@drawable/button_main_menu_garnet"/>
 
 		<Button
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_gravity="right"
 			android:id="@+id/button_player_again"
-			android:text="@string/play_again" />
+			android:background="@drawable/button_play_again_garnet" />
 
 	</LinearLayout>
+
+	<ImageView
+		android:layout_width="wrap_content"
+		android:layout_height="0dp"
+		android:layout_weight="10"
+		android:layout_gravity="center_horizontal|bottom"
+		android:layout_margin="5dp"
+		android:background="@drawable/banner_footer_alt"
+		/>
 
 </LinearLayout>
